# hisho

./: .env.example  .gitignore  README.md  pyproject.toml
src/: bot.py  config.py  mention.py  remind.py  scheduler.py
src/hisho/: __init__.py
