[project]
name = "hisho"
version = "0.1.0"
description = "うゆぷんの雑用を一手に引き受けてくれるDA出身の秘書、井ノ上たきなです"
authors = [
    { name = "Kazuki Tobita", email = "kazukiti201@gmail.com" }
]
dependencies = [
    "slack-bolt>=1.18.1",
    "python-dotenv>=1.0.1",
    "apscheduler>=3.10.4",
    "sqlalchemy>=2.0.28",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "hupper>=1.12.1",
]

[tool.rye.scripts]
dev = { cmd = "hupper -m src.bot" }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hisho"]
